--- a/index.html
+++ b/index.html
@@ -149,13 +149,13 @@
     </section>
     <section class="images__section">
       <h2 class="images__title title-decor">А можно в картинках?</h2>
-      <ul class="images__list">
+      <div class="images__list">
         <img class="images__item-image" alt="Морской закат на фоне гор" src="./images/sunset.png" loading="lazy" />
         <img class="images__item-image" alt="Миска с милым мороженным" src="./images/ice-cream.png" loading="lazy" />
-        <img class="images__item-image" alt="Стопка книг" src="./images/books.png" loading="lazy" />
         <img class="images__item-image" alt="Касета с музыкой" src="./images/tape.png" loading="lazy" />
+        <img class="images__item-image" alt="Стопка книг" src="./images/books.png" loading="lazy" />
         <img class="images__item-image" alt="Улочка в японской глуши" src="./images/street.png" loading="lazy" />
-      </ul>
+      </div>
     </section>
   </main>
   <footer class="footer decorated-zone">
