--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="color-scheme" content="dark light">
   <link rel="stylesheet" href="./fonts/fonts.css">
+  <link rel="stylesheet" href="./styles/variables.css">
   <link rel="stylesheet" href="./styles/globals.css">
   <link rel="stylesheet" href="./styles/style.css">
   <link rel="stylesheet" href="./styles/light.css">
   <link rel="stylesheet" href="./styles/dark.css">
-  <link rel="stylesheet" href="./styles/variables.css">
   <title>Сложно сосредоточиться</title>
   <script src="./scripts/script.js"></script>
 </head>
@@ -49,11 +49,11 @@
     </div>
   </header>
   <main>
-    <section class="question__section content">
-      <h2 class="question__title title">Почему сосредоточиться так сложно</h2>
-      <ul class="question__list list">
-        <li class="question__item item">
-          <h3 class="question__title title-decor">Многозадачность</h3>
+    <section class=" content">
+      <h2 class="title">Почему сосредоточиться так сложно</h2>
+      <ul class="list">
+        <li class="item">
+          <h3 class="title-decor">Многозадачность</h3>
           <p>Особенно сложно сосредоточиться, когда задач много и
             все они — важные. Где же легендарная многозадачность, когда она так нужна вам (и всем нанимающим
             менеджерам этого мира)? А дело в том, что её просто не существует. Исследователи <a class="link"
@@ -62,8 +62,8 @@
             несколько важных задач, организм паникует и выделяет кортизол и адреналин — «гормоны стресса».
             Из-за этого мы работаем невнимательно: ошибаемся и быстро устаём.</p>
         </li>
-        <li class="question__item item">
-          <h3 class="question__title title-decor">Дофамин</h3>
+        <li class="item">
+          <h3 class="title-decor">Дофамин</h3>
           <p>С гормонами стресса всё понятно, но дальше — ещё
             интереснее. В нашей невозможности сосредоточиться замешана и полная противоположность стрессу — дофамин.
             Это вещество участвует в системе вознаграждения мозга. Причём тут он? Мы часто отвлекаемся от важной
@@ -73,25 +73,25 @@
         </li>
       </ul>
     </section>
-    <section class="examples__section content">
-      <h2 class="examples__title title">Что снижает концентрацию внимания?</h2>
-      <ul class="examples__list list">
-        <li class="examples__item item">
-          <h3 class="examples__title title-decor">Многозадачность</h3>
+    <section class="content__section content">
+      <h2 class="content__title title">Что снижает концентрацию внимания?</h2>
+      <ul class="content__list list">
+        <li class="content__item item">
+          <h3 class="content__title title-decor">Многозадачность</h3>
           <p>Как концентрация может снижаться из-за… концентрации?
             Любая стрессовая ситуация (и резко меняющийся мир в целом) заставляет наш мозг постоянно «сканировать»
             окружающую среду на предмет опасности. Например, читать новости вместо работы. Но быть собранными всё
             время — невозможно. Концентрация — мышца, и она может не выдержать, если не давать ей отдохнуть.</p>
         </li>
-        <li class="examples__item item">
-          <h3 class="examples__title title-decor">Еда</h3>
+        <li class="content__item item">
+          <h3 class="content__title title-decor">Еда</h3>
           <p>«Быстрые углеводы» — сахар, белый хлеб, сладости —
             молниеносно доставляют в мозг энергию и помогают ему лучше работать. Но уходит эта энергия также быстро,
             как и приходит. А мы в результате попадаем на «углеводные качели»: как только действие «быстрых углеводов»
             заканчивается, мы чувствуем усталость и сонливость. И хотим ещё больше быстрых углеводов.</p>
         </li>
-        <li class="examples__item item">
-          <h3 class="examples__title title-decor">Гаджеты</h3>
+        <li class="content__item item">
+          <h3 class="content__title title-decor">Гаджеты</h3>
           <p>Да-да, это та самая ситуация, когда на экране
             ноутбука — код, в наушниках — подкаст, а на компьютере фоном — ещё и видео с забавными утятами. В
             результате мозг пытается переключиться с одной задачи на другую — и просто не может. А чтобы вернуться к
@@ -100,56 +100,56 @@
         </li>
       </ul>
     </section>
-    <section class="answers__section content">
-      <h2 class="answers__title title">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)</h2>
-      <ul class="answers__list list">
-        <li class="answers__item item">
-          <h3 class="answers__title title-decor">5 простых (на самом деле не очень) советов</h3>
-        </li>
-        <li class="answers__item item">
-          <h4 class="answers__subtitle title-decor">Представьте небо и облака</h4>
-          <p>
-            Или листья в ручье. Тут дело в лёгкой медитации, которая помогает успокоиться. Ведь часто именно тревожные
-            мысли о сложных задачах как раз и мешают эти сложные задачи делать. В такие моменты можно закрыть глаза и
-            представить, что чистое небо — это вы, а облака — тревожные мысли. И сколько бы их ни было — ясное небо
-            всегда будет где-то там, за тучами, и никуда не денется. Это упражнение поможет вернуться в настоящий
-            момент, а не волноваться о потенциальных проблемах из будущего.
-          </p>
-        </li>
-        <li class="answers__item item">
-          <h4 class="answers__subtitle title-decor">Включите музыку</h4>
-          <p>Но не любую, и не любимую. Любимая может быть связана
-            с сильными положительными эмоциями, которые тоже очень сильно отвлекают. Подойдёт тихая, спокойная,
-            умеренно-ритмичная. Можно вообще попробовать включить плейлист c «белым шумом» или нейромузыкой.</p>
-        </li>
-        <li class="answers__item item">
-          <h4 class="answers__subtitle title-decor">Прогуляйтесь</h4>
-          <p>Или даже пробегитесь. Лучше найти парк или лес: один
-            эксперимент <a class="link" href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328"
-              target="_blank">показал</a>, что созерцание
-            природы повышает концентрацию, в то
-            время как после просмотра
-            городских пейзажей она наоборот понижается. Можно совместить прогулку с физическими упражнениями или бегом
-            — так в мозг поступит ещё больше кислорода и он будет лучше работать. Но и простая двадцатиминутная
-            прогулка — тоже отличный вариант.</p>
-        </li>
-        <li class="answers__item item">
-          <h4 class="answers__subtitle title-decor">Хорошо ешьте</h4>
-          <p>Мы — не ваша бабушка, но это правда важно. Выбирайте
-            продукты, которые препятствуют резким скачкам сахара в крови. Например, с высоким содержанием клетчатки:
-            овощи, ягоды, бобовые (нут, чечевица, фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.</p>
-        </li>
-        <li class="answers__item item">
-          <h4 class="answers__subtitle title-decor">Читайте</h4>
-          <p>Настоящие бумажные книги. Это правда помогает с
-            концентрацией: чтобы прочитать пост в соцсети, достаточно нескольких минут или даже секунд. А вот
-            интересная книга способна затянуть и на несколько часов и круто тренирует направленное внимание.</p>
-        </li>
-      </ul>
+    <section class="content">
+      <h2 class="title">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)</h2>
+      <div class="wrapper">
+        <h3 class="title-decor wrapper-title">5 простых (на самом деле не очень) советов</h3>
+        <ul class="list">
+          <li class="item">
+            <h4 class="title-decor">Представьте небо и облака</h4>
+            <p>
+              Или листья в ручье. Тут дело в лёгкой медитации, которая помогает успокоиться. Ведь часто именно тревожные
+              мысли о сложных задачах как раз и мешают эти сложные задачи делать. В такие моменты можно закрыть глаза и
+              представить, что чистое небо — это вы, а облака — тревожные мысли. И сколько бы их ни было — ясное небо
+              всегда будет где-то там, за тучами, и никуда не денется. Это упражнение поможет вернуться в настоящий
+              момент, а не волноваться о потенциальных проблемах из будущего.
+            </p>
+          </li>
+          <li class="item">
+            <h4 class="title-decor">Включите музыку</h4>
+            <p>Но не любую, и не любимую. Любимая может быть связана
+              с сильными положительными эмоциями, которые тоже очень сильно отвлекают. Подойдёт тихая, спокойная,
+              умеренно-ритмичная. Можно вообще попробовать включить плейлист c «белым шумом» или нейромузыкой.</p>
+          </li>
+          <li class="item">
+            <h4 class="title-decor">Прогуляйтесь</h4>
+            <p>Или даже пробегитесь. Лучше найти парк или лес: один
+              эксперимент <a class="link" href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328"
+                target="_blank">показал</a>, что созерцание
+              природы повышает концентрацию, в то
+              время как после просмотра
+              городских пейзажей она наоборот понижается. Можно совместить прогулку с физическими упражнениями или бегом
+              — так в мозг поступит ещё больше кислорода и он будет лучше работать. Но и простая двадцатиминутная
+              прогулка — тоже отличный вариант.</p>
+          </li>
+          <li class="item">
+            <h4 class="title-decor">Хорошо ешьте</h4>
+            <p>Мы — не ваша бабушка, но это правда важно. Выбирайте
+              продукты, которые препятствуют резким скачкам сахара в крови. Например, с высоким содержанием клетчатки:
+              овощи, ягоды, бобовые (нут, чечевица, фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.</p>
+          </li>
+          <li class="item">
+            <h4 class="title-decor">Читайте</h4>
+            <p>Настоящие бумажные книги. Это правда помогает с
+              концентрацией: чтобы прочитать пост в соцсети, достаточно нескольких минут или даже секунд. А вот
+              интересная книга способна затянуть и на несколько часов и круто тренирует направленное внимание.</p>
+          </li>
+        </ul>
+      </div>
     </section>
-    <section class="images__section">
-      <h2 class="images__title title-decor">А можно в картинках?</h2>
-      <div class="images__list">
+    <section class="content__section content__section-images">
+      <h2 class="title-decor wrapper-title">А можно в картинках?</h2>
+      <div class="images__wrapper">
         <img class="images__item-image" alt="Морской закат на фоне гор" src="./images/sunset.png" loading="lazy" />
         <img class="images__item-image" alt="Миска с милым мороженным" src="./images/ice-cream.png" loading="lazy" />
         <img class="images__item-image" alt="Касета с музыкой" src="./images/tape.png" loading="lazy" />
@@ -159,7 +159,7 @@
     </section>
   </main>
   <footer class="footer decorated-zone">
-    <h1 class="footer__title accent-title">focus</h1>
+    <h2 class="footer__title accent-title">focus</h2>
   </footer>
 </body>
 
