--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </div>
   </header>
   <main>
-    <section class=" content">
+    <section class="content">
       <h2 class="title">Почему сосредоточиться так сложно</h2>
       <ul class="list">
         <li class="item">
@@ -147,7 +147,7 @@
         </ul>
       </div>
     </section>
-    <section class="content__section content__section-images">
+    <section class="content__section-images">
       <h2 class="title-decor wrapper-title">А можно в картинках?</h2>
       <div class="images__wrapper">
         <img class="images__item-image" alt="Морской закат на фоне гор" src="./images/sunset.png" loading="lazy" />
