--- a/index.html
+++ b/index.html
@@ -76,22 +76,22 @@
     <section class="content__section content">
       <h2 class="content__title title">Что снижает концентрацию внимания?</h2>
       <ul class="content__list list">
-        <li class="content__item item">
-          <h3 class="content__title title-decor">Многозадачность</h3>
+        <li class="item">
+          <h3 class=" title-decor">Многозадачность</h3>
           <p>Как концентрация может снижаться из-за… концентрации?
             Любая стрессовая ситуация (и резко меняющийся мир в целом) заставляет наш мозг постоянно «сканировать»
             окружающую среду на предмет опасности. Например, читать новости вместо работы. Но быть собранными всё
             время — невозможно. Концентрация — мышца, и она может не выдержать, если не давать ей отдохнуть.</p>
         </li>
-        <li class="content__item item">
-          <h3 class="content__title title-decor">Еда</h3>
+        <li class="item">
+          <h3 class=" title-decor">Еда</h3>
           <p>«Быстрые углеводы» — сахар, белый хлеб, сладости —
             молниеносно доставляют в мозг энергию и помогают ему лучше работать. Но уходит эта энергия также быстро,
             как и приходит. А мы в результате попадаем на «углеводные качели»: как только действие «быстрых углеводов»
             заканчивается, мы чувствуем усталость и сонливость. И хотим ещё больше быстрых углеводов.</p>
         </li>
-        <li class="content__item item">
-          <h3 class="content__title title-decor">Гаджеты</h3>
+        <li class="item">
+          <h3 class=" title-decor">Гаджеты</h3>
           <p>Да-да, это та самая ситуация, когда на экране
             ноутбука — код, в наушниках — подкаст, а на компьютере фоном — ещё и видео с забавными утятами. В
             результате мозг пытается переключиться с одной задачи на другую — и просто не может. А чтобы вернуться к
@@ -106,7 +106,7 @@
         <h3 class="title-decor wrapper-title">5 простых (на самом деле не очень) советов</h3>
         <ul class="list">
           <li class="item">
-            <h4 class="title-decor">Представьте небо и облака</h4>
+            <h4 class="title-decor title-light">Представьте небо и облака</h4>
             <p>
               Или листья в ручье. Тут дело в лёгкой медитации, которая помогает успокоиться. Ведь часто именно тревожные
               мысли о сложных задачах как раз и мешают эти сложные задачи делать. В такие моменты можно закрыть глаза и
@@ -116,13 +116,13 @@
             </p>
           </li>
           <li class="item">
-            <h4 class="title-decor">Включите музыку</h4>
+            <h4 class="title-decor title-light">Включите музыку</h4>
             <p>Но не любую, и не любимую. Любимая может быть связана
               с сильными положительными эмоциями, которые тоже очень сильно отвлекают. Подойдёт тихая, спокойная,
               умеренно-ритмичная. Можно вообще попробовать включить плейлист c «белым шумом» или нейромузыкой.</p>
           </li>
           <li class="item">
-            <h4 class="title-decor">Прогуляйтесь</h4>
+            <h4 class="title-decor title-light">Прогуляйтесь</h4>
             <p>Или даже пробегитесь. Лучше найти парк или лес: один
               эксперимент <a class="link" href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328"
                 target="_blank">показал</a>, что созерцание
@@ -133,13 +133,13 @@
               прогулка — тоже отличный вариант.</p>
           </li>
           <li class="item">
-            <h4 class="title-decor">Хорошо ешьте</h4>
+            <h4 class="title-decor title-light">Хорошо ешьте</h4>
             <p>Мы — не ваша бабушка, но это правда важно. Выбирайте
               продукты, которые препятствуют резким скачкам сахара в крови. Например, с высоким содержанием клетчатки:
               овощи, ягоды, бобовые (нут, чечевица, фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.</p>
           </li>
           <li class="item">
-            <h4 class="title-decor">Читайте</h4>
+            <h4 class="title-decor title-light">Читайте</h4>
             <p>Настоящие бумажные книги. Это правда помогает с
               концентрацией: чтобы прочитать пост в соцсети, достаточно нескольких минут или даже секунд. А вот
               интересная книга способна затянуть и на несколько часов и круто тренирует направленное внимание.</p>
@@ -148,7 +148,7 @@
       </div>
     </section>
     <section class="content__section-images">
-      <h2 class="title-decor wrapper-title">А можно в картинках?</h2>
+      <h2 class="title-decor">А можно в картинках?</h2>
       <div class="images__wrapper">
         <img class="images__item-image" alt="Морской закат на фоне гор" src="./images/sunset.png" loading="lazy" />
         <img class="images__item-image" alt="Миска с милым мороженным" src="./images/ice-cream.png" loading="lazy" />
